# ep2-grpc

./: .gitignore  Makefile  README.md  client  gen  pyproject.toml  run  server
misc/: client.txt  client_16.txt  client_512.txt  client_65536.txt  client_8192.txt  cursos.py  gen_input.py  input.txt  matr.json  matr.txt  siga.json  siga.txt  spec.html  spec.txt
proto/: msg.proto  msg_pb2.pyi
src/: client.py  commands.py  server.py
src/proto/: msg.proto
